--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "endOfLine": "lf",
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
-  "tabWidth": 2,
+  "tabWidth": 3,
   "trailingComma": "es5"
 }
