preparing mobile header view

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
       "node-sass": "^4.13.1",
       "prop-types": "^15.7.2",
       "react": "^16.12.0",
+      "react-animated-burgers": "^1.2.7",
       "react-dom": "^16.12.0",
       "react-helmet": "^5.2.1",
       "react-typography": "^0.16.19",
+      "styled-components": "^5.0.0",
       "typography": "^0.16.19",
       "typography-theme-noriega": "^0.16.19"
    },
